# OpenCL-Ray-Tracer

./: CMakeLists.txt  README.md  make.bat
src/cpp/: bitmap_io.cpp  bitmap_io.hpp  cl_material.cpp  cl_material.hpp  cl_sphere.cpp  cl_sphere.hpp  cl_triangle.cpp  cl_triangle.hpp  cl_vec3.cpp  cl_vec3.hpp  colour.cpp  colour.hpp  globals.hpp  main.cpp  utility.cpp  utility.hpp  vec3.cpp  vec3.hpp  window_utilities.cpp  window_utilities.hpp
src/cpp/lib/: hdrloader.cpp  hdrloader.hpp
src/cpp/opencl_objects/: cl_bounding_box.cpp  cl_bounding_box.hpp  cl_camera.cpp  cl_camera.hpp  cl_material.cpp  cl_material.hpp  cl_sphere.cpp  cl_sphere.hpp  cl_triangle.cpp  cl_triangle.hpp  cl_vec3.cpp  cl_vec3.hpp
src/opencl/: gpu_kernel.cl
